name:                dungeon-gen
version:             0.1.0.0
synopsis:            A quick, interactive Dungeon generation toy
description:         A beginner's rough and ready interactive dungeon generation implementation based on the writeup by Phi Dinh at http://www.reddit.com/r/gamedev/comments/1dlwc4/procedural_dungeon_generation_algorithm_explained
homepage:            https://github.com/githubuser/colorlovers-api-demo#readme
license:             MIT
license-file:        docs/LICENSE
-- The package author(s).
author:              Neill Bogie
-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          neillbogie@googlemail.com
copyright:           2013 Neill Bogie
category:            Game-Dev
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10



-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/nbogie/dungeon-gen#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
                        ,random
                        , AC-Vector >= 2.3.0
                        , gloss >= 1.7.0
                        , containers >= 0.5.0
                        , pretty-show >= 1.5.0
                        -- , delaunay >= 0.1
                        -- , normaldistribution
  default-language:    Haskell2010

executable dungeon-gen-exe
  hs-source-dirs:      app
  -- .hs or .lhs file containing the Main module.
  main-is:             GUI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                        ,random
                        , AC-Vector >= 2.3.0
                        , gloss >= 1.7.0
                        , containers >= 0.5.0
                        , pretty-show >= 1.5.0
                        , hashable
                        , unordered-containers
                        , normaldistribution >= 1.1.0.3
                        -- , delaunay >= 0.1
  default-language:    Haskell2010


test-suite dungeon-gen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dungeon-gen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nbogie/dungeon-gen-haskell.git

